--- a/projects/mfe-root/src/microfrontend-layout.html
+++ b/projects/mfe-root/src/microfrontend-layout.html
@@ -21,8 +21,11 @@
     <route default>
       <application name="@single-spa/welcome"></application>
     </route>
-    <route path="teste">
+    <route path="teste1">
       <application name="@mf/mf-micro-1"></application>
+    </route>
+    <route path="teste2">
+      <application name="@mf/mf-micro-2"></application>
     </route>
   </main>
 </single-spa-router>
